--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -62,3 +62,13 @@ services:
       - basketdb
     ports:
       - "5001:8080"
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConncetionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "5002:8080"
