--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,15 +3,17 @@ version: '3.4'
 services:
   catalogdb:
     container_name: catalogdb
-    ports:
-      - "27017:27017"
+    network_mode: host
+    #ports:
+    #  - "27017:27017"
     volumes:
       - mongo_data:/data/db
 
   basketdb:
     container_name: basketdb
-    ports:
-      - 6379:6379
+    network_mode: host
+    #ports:
+    #  - 6379:6379
 
   discountdb:
     container_name: discountdb
@@ -19,8 +21,9 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin1234
       - POSTGRES_DB=DiscountDb
-    ports:
-      - 5432:5432
+    network_mode: host
+    #ports:
+    #  - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -29,16 +32,18 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@aspnetrun.com
       - PGADMIN_DEFAULT_PASSWORD=admin1234
-    ports:
-      - 5050:80
+    network_mode: host
+    #ports:
+    #  - 5050:80
     volumes:
       - pgadmin_data:/var/lib/pgadmin
 
   portainer:
     container_name: portainer
-    ports:
-      - 8000:8000
-      - 9000:9000
+    network_mode: host
+    #ports:
+    #  - 8000:8000
+    #  - 9000:9000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
@@ -47,28 +52,34 @@ services:
     container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
-    depends_on:
-      - catalogdb
-    ports:
-      - "5000:8080"
+      - "DatabaseSettings:ConnectionString=mongodb://localhost:27017"
+      #- "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
+    #depends_on:
+    #  - catalogdb
+    network_mode: host
+    #ports:
+    #  - "5000:8080"
 
   basket.api:
     container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "CacheSettings:ConnectionString=basketdb:6379"
-    depends_on:
-      - basketdb
-    ports:
-      - "5001:8080"
+      - "CacheSettings:ConnectionString=localhost:6379"
+      #- "CacheSettings:ConnectionString=basketdb:6379"
+    #depends_on:
+    #  - basketdb
+    network_mode: host
+    #ports:
+    #  - "5001:8080"
 
   discount.api:
     container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConncetionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
-    depends_on:
-      - discountdb
-    ports:
-      - "5002:8080"
+      - "DatabaseSettings:ConncetionString=Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+      #- "DatabaseSettings:ConncetionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    #depends_on:
+    #  - discountdb
+    network_mode: host
+    #ports:
+    #  - "5002:8080"
